gitops/01-system/sub/victoria-metrics/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: victoria-metrics
spec:
  parentRefs:
  - name: management-gateway
    namespace: istio-system
  hostnames:
  - "grafana.jin-server.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: victoria-metrics-grafana
      port: 80 # Grafana service port in victoria-metrics-k8s-stack
